INSTAAR logo is going to have to be off center nothing I can do to fix

--- a/website/CSS/summit.css
+++ b/website/CSS/summit.css
@@ -73,26 +73,16 @@
   max-width:110%;
   max-height:110%}
 .header-img {
-    display: block;
-    text-align: center;
-    margin: 1rem auto 0;
-    max-width:100%;
-    max-height:100%}
-.value-image2 {
-    display: block;
-    text-align: center;
-    margin: 2rem auto 0;
-    margin-bottom: 1rem;
-    width:20rem;
-    height:20rem; }
-.value-image3 {
-    display: block;
-    text-align: center;
-    margin: 2rem auto 0;
-    margin-bottom: 1rem;
-    margin-left: 8rem;
-    width:24rem;
-    height:20rem; }
+  display: block;
+  text-align: center;
+  margin: 1rem auto 0;
+  max-width:100%;
+  max-height:100%}
+.illustration img {
+  max-width: 35%;
+  display: block;
+  text-align: center;
+  margin: 1rem auto 0 }
 
   /* Slideshow */
 * {box-sizing:border-box}
@@ -167,6 +157,8 @@
     margin-top: 9rem;
     margin-bottom: 7rem; }
   .value-img {
+    margin-bottom: 1rem; }
+  .value-img2 {
     margin-bottom: 1rem; }
 .docs-section {
   padding: 6rem 0; }
